...
    <string name="onCreate">Hello from onCreate()!</string>
    <string name="onStart">Hello from onStart()!</string>
    <string name="onResume">Hello from onResume()!</string>
    <string name="onPause">Hello from onPause()!</string>
    <string name="onStop">Hello from onStop()!</string>
    <string name="onDestroy">Hello from onDestroy()!</string>
    <string name="login">Login</string>
    <string name="sign_out">Sign Out</string>
    <string name="login_banned">Feel the wrath of the BAN HAMMER!!!</string>
    <string name="login_success">Login Successful!</string>
    <string name="login_incorrect_password">Incorrect Password</string>
    <string name="login_registration_required">Please register before attempting to login</string>
    <string name="login_username_empty">Your username is blank</string>
...
